==> klaus-liebler/espidf-components/espidf-ccs811/ccs811.cc <==
#include <inttypes.h>
#include <i2c.hh>
#include "ccs811.hh"
#include <esp_log.h>
#include <string.h>
#define TAG "CCS811"
#define CCS811_WAIT_AFTER_RESET_US 2000    // The CCS811 needs a wait after reset
#define CCS811_WAIT_AFTER_APPSTART_US 1000 // The CCS811 needs a wait after app start
#define CCS811_WAIT_AFTER_WAKE_US 50       // The CCS811 needs a wait after WAKE signal
#define CCS811_WAIT_AFTER_APPERASE_MS 500  // The CCS811 needs a wait after app erase (300ms from spec not enough)
#define CCS811_WAIT_AFTER_APPVERIFY_MS 70  // The CCS811 needs a wait after app verify
#define CCS811_WAIT_AFTER_APPDATA_MS 50    // The CCS811 needs a wait after writing app data
#define CCS811_STATUS 0x00
#define CCS811_MEAS_MODE 0x01
#define CCS811_ALG_RESULT_DATA 0x02 // up to 8 bytes
#define CCS811_RAW_DATA 0x03        // 2 bytes
#define CCS811_ENV_DATA 0x05        // 4 bytes
#define CCS811_THRESHOLDS 0x10      // 5 bytes
#define CCS811_BASELINE 0x11        // 2 bytes
#define CCS811_HW_ID 0x20
#define CCS811_HW_VERSION 0x21
#define CCS811_FW_BOOT_VERSION 0x23 // 2 bytes
#define CCS811_FW_APP_VERSION 0x24  // 2 bytes
#define CCS811_ERROR_ID 0xE0
#define CCS811_APP_ERASE 0xF1  // 4 bytes
#define CCS811_APP_DATA 0xF2   // 9 bytes
#define CCS811_APP_VERIFY 0xF3 // 0 bytes
#define CCS811_APP_START 0xF4  // 0 bytes
#define CCS811_SW_RESET 0xFF   // 4 bytes

bool CCS811Manager::flash(const uint8_t *image, int size)
{
  uint8_t sw_reset[] = {0x11, 0xE5, 0x72, 0x8A};
  uint8_t app_erase[] = {0xE7, 0xA7, 0xE6, 0x09};
  uint8_t app_verify[] = {};
  uint8_t status;
  int count;
  bool ok;
  wake_up();

  // Try to ping CCS811 (can we reach CCS811 via I2C?)
  ESP_LOGI(TAG, "ping ");
  ok = i2cwrite(0, 0, 0);
  if (!ok)
  {
    ESP_LOGE(TAG, "FAILED");
    goto abort_begin;
  }
  ESP_LOGI(TAG, "ok");

  // Invoke a SW reset (bring CCS811 in a know state)
  ESP_LOGI(TAG, "reset ");
  ok = i2cwrite(CCS811_SW_RESET, 4, sw_reset);
  if (!ok)
  {
    ESP_LOGE(TAG, "FAILED");
    goto abort_begin;
  }
  vTaskDelay(1);
  ESP_LOGI(TAG, "ok");

  // Check status (after reset, CCS811 should be in boot mode with or without valid app)
  ESP_LOGI(TAG, "status (reset1) ");
  ok = i2cread(CCS811_STATUS, 1, &status);
  if (!ok)
  {
    ESP_LOGE(TAG, "FAILED");
    goto abort_begin;
  }
  ESP_LOGI(TAG, "0x%02X", status);
  if (status != 0x00 && status != 0x10)
  {
    ESP_LOGE(TAG, "ERROR - ignoring"); // Seems to happens when there is no valid app
  }
  else
  {
    ESP_LOGI(TAG, "ok");
  }

  // Invoke app erase
  ESP_LOGI(TAG, "app-erase ");
  ok = i2cwrite(CCS811_APP_ERASE, 4, app_erase);
  if (!ok)
  {
    ESP_LOGE(TAG, "FAILED");
    goto abort_begin;
  }
  vTaskDelay(pdMS_TO_TICKS(CCS811_WAIT_AFTER_APPERASE_MS));
  ESP_LOGI(TAG, "ok");

  // Check status (CCS811 should be in boot mode without valid app, with erase completed)
  ESP_LOGI(TAG, "status (app-erase) ");
  ok = i2cread(CCS811_STATUS, 1, &status);
  if (!ok)
  {
    ESP_LOGE(TAG, "FAILED");
    goto abort_begin;
  }
  ESP_LOGI(TAG, "0x%02X", status);
  if (status != 0x40)
  {
    ESP_LOGE(TAG, "ERROR");
    goto abort_begin;
  }
  ESP_LOGI(TAG, "ok");

  // Write all blocks
  count = 0;
  while (size > 0)
  {
    if (count % 64 == 0)
    {
      ESP_LOGI(TAG, "writing %d", size);
    }
    int len = size < 8 ? size : 8;
    // Copy PROGMEM to RAM
    uint8_t ram[8];
    memcpy(ram, image, len);
    // Send 8 bytes from RAM to CCS811
    ok = i2cwrite(CCS811_APP_DATA, len, ram);
    if (!ok)
    {
      ESP_LOGE(TAG, "app data FAILED");
      goto abort_begin;
    }
    ESP_LOGI(TAG, ".");
    vTaskDelay(pdMS_TO_TICKS(CCS811_WAIT_AFTER_APPDATA_MS));
    image += len;
    size -= len;
    count++;
    if (count % 64 == 0)
    {
      ESP_LOGI(TAG, " %d", size);
    }
  }
  if (count % 64 != 0)
  {
    ESP_LOGI(TAG, " %d", size);
  }

  // Invoke app verify
  ESP_LOGI(TAG, "app-verify ");
  ok = i2cwrite(CCS811_APP_VERIFY, 0, app_verify);
  if (!ok)
  {
    ESP_LOGE(TAG, "FAILED");
    goto abort_begin;
  }
  vTaskDelay(pdMS_TO_TICKS(CCS811_WAIT_AFTER_APPVERIFY_MS));
  ESP_LOGI(TAG, "ok");

  // Check status (CCS811 should be in boot mode with valid app, and erased and verified)
  ESP_LOGI(TAG, "status (app-verify) ");
  ok = i2cread(CCS811_STATUS, 1, &status);
  if (!ok)
  {
    ESP_LOGE(TAG, "FAILED");
    goto abort_begin;
  }
  ESP_LOGI(TAG, "0x%02X", status);
  if (status != 0x30)
  {
    ESP_LOGE(TAG, "ERROR");
    goto abort_begin;
  }
  ESP_LOGI(TAG, "ok");

  // Invoke a second SW reset (clear flashing flags)
  ESP_LOGI(TAG, "reset2 ");
  ok = i2cwrite(CCS811_SW_RESET, 4, sw_reset);
  if (!ok)
  {
    ESP_LOGE(TAG, "FAILED");
    goto abort_begin;
  }
  vTaskDelay(1);
  ESP_LOGI(TAG, "ok");

  // Check status (after reset, CCS811 should be in boot mode with valid app)
  ESP_LOGI(TAG, "status (reset2) ");
  ok = i2cread(CCS811_STATUS, 1, &status);
  if (!ok)
  {
    ESP_LOGE(TAG, "FAILED");
    goto abort_begin;
  }
  ESP_LOGI(TAG, "0x%02X", status);
  if (status != 0x10)
  {
    ESP_LOGE(TAG, "ERROR");
    goto abort_begin;
  }
  ESP_LOGI(TAG, "ok");

  // CCS811 back to sleep
  wake_down();
  // Return success
  return true;

abort_begin:
  // CCS811 back to sleep
  wake_down();
  // Return failure
  return false;
}

void CCS811Manager::wake_init(void)
{
  if (nwake == GPIO_NUM_NC)
    return;
  gpio_reset_pin(nwake);
  gpio_set_direction(nwake, GPIO_MODE_OUTPUT);
}

void CCS811Manager::wake_up(void)
{
  if (nwake == GPIO_NUM_NC)
    return;
  gpio_set_level(nwake, 0);
  vTaskDelay(1);
}

void CCS811Manager::wake_down(void)
{
  if (nwake == GPIO_NUM_NC)
    return;
  gpio_set_level(nwake, 1);
}

bool CCS811Manager::i2cwrite(int regaddr, int count, uint8_t *buf)
{
  return I2C::WriteReg(this->i2c_port, (uint8_t)this->slaveaddr, regaddr, buf, count)==ESP_OK;
}

bool CCS811Manager::i2cread(int regaddr, int count, uint8_t *buf)
{
  return I2C::ReadReg(this->i2c_port, (uint8_t)this->slaveaddr, regaddr, buf, count)==ESP_OK;
}
